Fixing black background for better contrast

--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 html body {
   font-size: 100%;
   height: 100%;
-  background-color: #e5e5e5;
+  background-color: #000000;
   height: 100%;
   padding: 0;
 }
